--- a/Pytorch_DR_detection.ipynb
+++ b/Pytorch_DR_detection.ipynb
@@ -2060,7 +2060,8 @@
       "cell_type": "markdown",
       "source": [
         "# Model 3 \n",
-        "**For the final model arquitecture it will be a more complex one with many more layers the ResNet50**"
+        "**For the final model arquitecture it will be a more complex one with many more layers the ResNet50\n",
+        "NOTICE THIS LAST MODEL TAKES A LOT OF TIME AND COMPUTATIONAL COST**"
       ],
       "metadata": {
         "id": "ipV8UY-Nl66o"
